Enable JUnit5 reflective access to test code.